--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,4 @@
-<h1 class="header row col-12-sm justify-content-center mt-5"></h1>
-<h1 class="header row col-12-sm justify-content-center mt-5"></h1>
-<h1 class="header row col-12-sm justify-content-center mt-5"></h1>
+<div class="container">
 <h1 class="header">Sign up</h1>
 <div class="form-group container col-4 mt-5">
     <div class="row col-12-sm justify-content-center">
@@ -31,6 +29,7 @@
           <%= render "devise/shared/links" %>
         <% end %>  
     </div>
+</div>
 </div>
 
 
